After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 683326 - Misleading message when our presence is offline
Misleading message when our presence is offline
Status: RESOLVED FIXED
Product: empathy
Classification: Core
Component: Contact List
2.33.x
Other Linux
: Normal normal
: ---
Assigned To: empathy-maint
empathy-maint
Depends on:
Blocks:
 
 
Reported: 2012-09-04 12:24 UTC by Guillaume Desmottes
Modified: 2012-09-05 07:14 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
roster-window: display a specific message when we are offline (1.32 KB, patch)
2012-09-04 13:06 UTC, Guillaume Desmottes
committed Details | Review
display_page_message: use a flag instead of booleans (3.59 KB, patch)
2012-09-04 13:06 UTC, Guillaume Desmottes
none Details | Review
roster-window: display a button to go online (4.54 KB, patch)
2012-09-04 13:06 UTC, Guillaume Desmottes
none Details | Review
display_page_message: use a flag instead of booleans (3.61 KB, patch)
2012-09-04 13:10 UTC, Guillaume Desmottes
committed Details | Review
roster-window: display a button to go online (4.56 KB, patch)
2012-09-04 13:11 UTC, Guillaume Desmottes
committed Details | Review

Description Guillaume Desmottes 2012-09-04 12:24:22 UTC
If you have some account configured (and enabled) but your presence is set to offline, the contact list display this message "No online contacts" which is misleading as your contacts can actually be online, that's you who is offline.
Comment 1 Guillaume Desmottes 2012-09-04 13:06:27 UTC
Created attachment 223423 [details] [review]
roster-window: display a specific message when we are offline
Comment 2 Guillaume Desmottes 2012-09-04 13:06:30 UTC
Created attachment 223424 [details] [review]
display_page_message: use a flag instead of booleans

More scalable.
Comment 3 Guillaume Desmottes 2012-09-04 13:06:33 UTC
Created attachment 223425 [details] [review]
roster-window: display a button to go online
Comment 4 Guillaume Desmottes 2012-09-04 13:10:58 UTC
Created attachment 223426 [details] [review]
display_page_message: use a flag instead of booleans

More scalable.
Comment 5 Guillaume Desmottes 2012-09-04 13:11:07 UTC
Created attachment 223427 [details] [review]
roster-window: display a button to go online
Comment 6 Xavier Claessens 2012-09-04 13:11:43 UTC
+1
Comment 7 Guillaume Desmottes 2012-09-04 13:17:23 UTC
I sent a mail asking for a UI/String freeze exception.
Comment 8 Guillaume Desmottes 2012-09-05 07:13:45 UTC
Attachment 223423 [details] pushed as e52959e - roster-window: display a specific message when we are offline
Attachment 223426 [details] pushed as 34789c7 - display_page_message: use a flag instead of booleans
Attachment 223427 [details] pushed as 33f34ab - roster-window: display a button to go online
Comment 9 Guillaume Desmottes 2012-09-05 07:14:16 UTC
(In reply to comment #7)
> I sent a mail asking for a UI/String freeze exception.

Approved.