roster-window: display a specific message when we are offline

https://bugzilla.gnome.org/show_bug.cgi?id=683326